<?xml version="1.0"?>
<package>
  <name>nostop_simulator</name>
  <version>0.0.0</version>
  <description>The nostop_simulator package</description>

  <maintainer email="nardi@mail.dm.unipi.it">SimoneNardi</maintainer>
  <license>GPLv2</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/nostop_simulator</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>base_math</build_depend>
  <build_depend>nostop_learning</build_depend>
  <build_depend>nostop_agent</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <build_depend>std_msgs</build_depend>
  
  <run_depend>base_math</run_depend>
  <run_depend>nostop_learning</run_depend>
  <run_depend>nostop_agent</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>